clicking on states to direct map

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,25 +4,24 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2">
-      <!-- <app-totals badgeStyle="danger" field="TotalConfirmed" title="Total Confirmed"></app-totals> -->
+    <div class="col-lg-2" style="min-width: 300px;">
       <app-total-confirmed></app-total-confirmed>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
       <app-map></app-map>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4">
       <div class="row bottom-spacing">
-        <div class="col-md-12">
+        <div class="col-lg-12">
           <app-chart></app-chart>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <app-totals badgeStyle="light" field="TotalDeaths" title="Total Deaths"></app-totals>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <app-totals badgeStyle="success" field="TotalRecovered" title="Total Recovered"></app-totals>
         </div>
       </div>
