--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -5,14 +5,14 @@
         <div style="display: block;" *ngIf="confirmedData" class="chart-container">
           <canvas baseChart [datasets]="confirmedData.lineChartData" [labels]="confirmedData.lineChartLabels"
             [options]="confirmedData.lineChartOptions" [colors]="confirmedData.lineChartColors" [legend]="confirmedData.lineChartLegend"
-            [chartType]="confirmedData.lineChartType" [plugins]="confirmedData.lineChartPlugins"></canvas>
+            [chartType]="confirmedData.lineChartType"></canvas>
         </div>
       </tab>
       <tab heading="Deaths vs. Recovered">
         <div style="display: block;" *ngIf="deathVsRecoveryData" class="chart-container">
           <canvas baseChart [datasets]="deathVsRecoveryData.lineChartData" [labels]="deathVsRecoveryData.lineChartLabels"
             [options]="deathVsRecoveryData.lineChartOptions" [colors]="deathVsRecoveryData.lineChartColors" [legend]="deathVsRecoveryData.lineChartLegend"
-            [chartType]="deathVsRecoveryData.lineChartType" [plugins]="deathVsRecoveryData.lineChartPlugins"></canvas>
+            [chartType]="deathVsRecoveryData.lineChartType"></canvas>
         </div>
       </tab>
     </tabset>
