--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,28 +2,23 @@
   <span class="navbar-brand mb-0 h1">Coronavirus COVID-19</span>
 </nav>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-lg-2" style="min-width: 300px;">
-      <app-total-confirmed></app-total-confirmed>
-    </div>
-    <div class="col-lg-6">
-      <app-map></app-map>
-    </div>
-    <div class="col-lg-4">
-      <div class="row bottom-spacing">
-        <div class="col-lg-12">
-          <app-chart></app-chart>
-        </div>
-      </div>
+<div class="container-fluid flex">
+  <div class="total-confirmed-container gutter">
+    <app-total-confirmed></app-total-confirmed>
+  </div>
+  <div class="map-container gutter">
+    <app-map></app-map>
+  </div>
 
-      <div class="row">
-        <div class="col-lg-6">
-          <app-totals badgeStyle="light" field="TotalDeaths" title="Total Deaths"></app-totals>
-        </div>
-        <div class="col-lg-6">
-          <app-totals badgeStyle="success" field="TotalRecovered" title="Total Recovered"></app-totals>
-        </div>
+  <div class="chart-container gutter">
+    <app-chart></app-chart>
+
+    <div class="flex">
+      <div class="totals-container">
+        <app-totals badgeStyle="light" field="TotalDeaths" title="Total Deaths"></app-totals>
+      </div>
+      <div class="totals-container">
+        <app-totals badgeStyle="success" field="TotalRecovered" title="Total Recovered"></app-totals>
       </div>
     </div>
   </div>
