selecting a county displays the confirmed count

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -17,5 +17,7 @@
         </agm-circle>
       </agm-map>
     </div>
+
+    <app-county-details (close)="clearSelected()" class="county-details" *ngIf="selectedCounty" [total]="selectedCounty"></app-county-details>
   </div>
 </div>
